# pubky-noise

./: Cargo.toml  README.md
.github/workflows/: rust.yml
e2e/: Cargo.toml
e2e/src/: lib.rs
e2e/src/tests/: mobile_manager.rs  mod.rs  pubky_data.rs  pubky_noise.rs
pubky-data/: Cargo.toml  README.md
pubky-data/src/: identity_payload.rs  lib.rs  mobile_manager.rs  noise_crypto.rs  path_derivation.rs  serializer.rs  snow_crypto.rs
pubky-noise/: Cargo.toml  README.md
pubky-noise/doc/: keys-lifecycle.md
pubky-noise/src/: identity_payload.rs  lib.rs  serializer.rs  snow_crypto.rs  snow_crypto_resolver.rs
