[workspace]
members = [
  "pubky-data",
  #"examples/rust",
  "e2e",
  #"examples",
]
default-members = [
  "pubky-data",
] # `ws publish` will only attempt to publish these ones. 
resolver = "2"

[workspace.package]
edition = "2021"
authors = [
  "RadeonRutherford <radeon@users.noreply.github.com>",
]
license = "MIT"


[profile.release]
lto = true
opt-level = 'z'


[workspace.dependencies]
# Setting "default-features = false" because cargo doesn't allow member crates to override the root "default-features" flag, which if not set, is implied to be true.
# Member crates that need "default-features = false" should leave it out of their dependency specification, as it's inherited from here.
# Member crates that need "default-features = true" should add a "default" feature to the features list, which is equivalent.
pkarr = { version = "3.10.0", default-features = false }
mainline = { version = "5.4.0" }
pkarr-relay = { version = "0.11.0" }
