[package]
name = "e2e"
edition.workspace = true
version = "0.6.0-rc.6"
publish = false

[dependencies]
pubky-testnet = { git = "https://github.com/pubky/pubky-core", tag = "v0.7.0-rc.3", features = ["embedded-postgres"] }
pubky-data = { path = "../pubky-data" }
tokio = { version = "1.47.1", features = ["full", "test-util"] }
tracing-subscriber = "0.3.20"
bytes = "1.10.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
