[package]
name = "e2e"
edition.workspace = true
version = "0.6.0-rc.6"
publish = false

[dependencies]
pubky-testnet = { version = "0.7.0", features = ["embedded-postgres"] }
pubky-data = { path = "../pubky-data", features = ["test-utils"] }
tokio = { version = "1.47.1", features = ["full", "test-util"] }
tracing-subscriber = "0.3.20"
bytes = "1.10.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
