[package]
name = "e2e"
edition.workspace = true
version = "0.1.0-rc1"
publish = false

[dependencies]
pubky-testnet = { version = "0.7.0", features = ["embedded-postgres"] }
pubky-noise = { path = "../pubky-noise", features = ["test-utils"] }
tokio = { version = "1.47.1", features = ["full", "test-util"] }
tracing-subscriber = "0.3.20"
bytes = "1.10.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
