[package]
name = "pubky-data"
description = "Fully-integrated Noise AE framework in pubky-sdk"
version = "0.0.1"
edition = "2021"
license = "MIT"
repository = ""
keywords = ["pubky", "noise"]
categories = ["authentication", "encryption"]

[dependencies]
pubky = { version = "0.6.0" }
ed25519-dalek = { version = "2.1.1" }
sha256 = { version = "1.6.0" }
rust-crypto = { version = "0.2.36" }
x25519-dalek = { version = "2.0.0-rc.3", features = ["static_secrets"] }
chacha20poly1305 = { version = "0.10.1" }
curve25519-dalek = { version = "4.1.3" }
snow = { version = "0.10.0", features = ["use-sha2"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.9.0"
