[package]
name = "pubky-data"
description = "Fully-integrated Noise AE framework in pubky-sdk"
version = "0.0.1"
edition = "2021"
license = "MIT"
repository = ""
keywords = ["pubky", "noise"]
categories = ["authentication", "encryption"]

[dependencies]
pubky = "0.7.0"
ed25519-dalek = { version = "=3.0.0-pre.5" }
curve25519-dalek = { version = "=5.0.0-pre.5" }
snow = { version = "0.10.0", features = ["use-sha2"] }
getrandom = "0.3"
sha2 = "0.11.0-rc.4"
hex = "0.4"
rand = "0.9.0"
